k8s-ingress-auth-external/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: bitxon/app
          ports:
            - containerPort: 8080
