k8s-ingress-auth-external/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.default.svc.cluster.local:8080"
    #nginx.ingress.kubernetes.io/auth-signin: "http://localhost:8888"
spec:
  rules:
    - host: application-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 8080
